<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondPage">

    <ImageView
        android:id="@+id/imAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/bAvatar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chose_avatar_b"
        android:textSize="20sp"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/imAvatar"
        app:layout_constraintStart_toStartOf="@+id/imAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imAvatar" />

    <EditText
        android:id="@+id/edLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/bAvatar"
        app:layout_constraintStart_toStartOf="@+id/bAvatar"
        app:layout_constraintTop_toBottomOf="@+id/bAvatar" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/name2"
        android:textSize="16sp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/edLogin"
        app:layout_constraintTop_toBottomOf="@+id/edLogin" />

    <EditText
        android:id="@+id/edName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <EditText
        android:id="@+id/edName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edName1"
        app:layout_constraintTop_toBottomOf="@+id/edName1" />

    <EditText
        android:id="@+id/edName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/edName2"
        app:layout_constraintTop_toBottomOf="@+id/edName2" />

    <Button
        android:id="@+id/bSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/b_Save"
        android:textSize="20sp"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/edName3"
        app:layout_constraintStart_toStartOf="@+id/edName3"
        app:layout_constraintTop_toBottomOf="@+id/edName3" />

</androidx.constraintlayout.widget.ConstraintLayout>